--- a/node/cli/Cargo.toml
+++ b/node/cli/Cargo.toml
@@ -38,6 +38,7 @@ sc-sync-state-rpc = { version = "0.31.0" }
 futures                           ="0.3.16"
 sc-network = { version = "0.31.0" }
 sc-network-common = { version = "0.30.0" }
+sc-network-sync = { version = "0.30.0" }
 sc-consensus-slots = { version = "0.30.0" }
 grandpa                           ={ version="0.16.0", package="sc-consensus-grandpa" }
 sc-consensus-grandpa-rpc          ={ version="0.16.0" }
@@ -69,7 +70,6 @@ sc-sysinfo                        ={ version="24.0.0" }
 # substrate-state-trie-migration-rpc={ version="4.0.0-dev", git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
 
 sc-cli                            ={ version="0.33.0", optional=true }
-sc-network-sync = { version = "0.30.0" }
 sc-storage-monitor                ={ version="0.13.0" }
 
 # TODO (Nando): I think we can get rid of this
@@ -86,6 +86,7 @@ pallet-transaction-payment-rpc = { version = "27.0.0" }
 sc-basic-authorship = { version = "0.31.0" }
 sc-client-api = { version = "25.0.0" }
 sc-consensus = { version = "0.30.0" }
+sc-consensus-babe = { version = "0.31.0" }
 sc-executor = { version = "0.29.0" }
 sc-rpc = { version = "26.0.0" }
 sc-rpc-api = { version = "0.30.0" }
