--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -41,6 +41,7 @@ sp-runtime = { default-features = false , version = "28.0.0" }
 sp-staking = { default-features = false , version = "23.0.0" }
 sp-keyring = { default-features = false , version = "28.0.0", optional = true }
 sp-session = { default-features = false , version = "24.0.0" }
+sp-storage = { default-features = false , version = "17.0.0", optional = true }
 
 sp-transaction-pool ={ default-features = false , version = "23.0.0" }
 sp-version = { default-features = false , version = "26.0.0" }
@@ -249,6 +250,7 @@ runtime-benchmarks=[
   "pallet-session-benchmarking/runtime-benchmarks",
   "frame-system-benchmarking/runtime-benchmarks",
   "hex-literal",
+  "sp-storage",
 ]
 try-runtime=[
   "frame-executive/try-runtime",
