--- a/pallets/parameters/Cargo.toml
+++ b/pallets/parameters/Cargo.toml
@@ -19,8 +19,13 @@ sp-runtime        ={ version="28.0.0", default-features=false }
 sp-std            ={ version="12.0.0", default-features=false }
 
 [dev-dependencies]
-sp-core={ version="25.0.0" }
-sp-io  ={ version="27.0.0" }
+smallvec="1.4.1"
+
+pallet-balances={ version="25.0.0" }
+sp-core        ={ version="25.0.0" }
+sp-io          ={ version="27.0.0" }
+
+pallet-programs={ version="0.0.10", default-features=false, path="../programs" }
 
 [features]
 default=["std"]
@@ -29,6 +34,12 @@ runtime-benchmarks=[
   'frame-support/runtime-benchmarks',
   'frame-system/runtime-benchmarks',
 ]
-std=["frame-support/std", "frame-system/std", "scale-info/std", "sp-runtime/std", "sp-std/std"]
-
+std=[
+  "frame-support/std",
+  "frame-system/std",
+  "pallet-programs/std",
+  "scale-info/std",
+  "sp-runtime/std",
+  "sp-std/std",
+]
 try-runtime=["frame-support/try-runtime"]
