--- a/crates/testing-utils/Cargo.toml
+++ b/crates/testing-utils/Cargo.toml
@@ -41,6 +41,7 @@ sha3            ="0.10.8"
 base64          ="0.13.0"
 synedrion       ="0.1"
 hex             ="0.4.3"
+ethers          ="2.0.14"
 
 # Logging
 tracing           ="0.1.37"
