--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -17,7 +17,7 @@ strum_macros="0.25.3"
 
 sp-runtime ={ version="28.0.0", default-features=false, optional=true }
 sp-std     ={ version="12.0.0", default-features=false }
-lazy_static="1.4.0"
+lazy_static={ version="1.4.0", features=["spin_no_std"] }
 hex-literal="0.3.4"
 
 [features]
