--- a/crates/threshold-signature-server/Cargo.toml
+++ b/crates/threshold-signature-server/Cargo.toml
@@ -82,7 +82,7 @@ lazy_static          ="1.4.0"
 entropy-protocol     ={ path="../protocol", features=["unsafe"] }
 blake3               ="1.5.0"
 ethers-core          ="2.0.14"
-
+schnorrkel           ={ version="0.9.1", default-features=false, features=["std"] }
 [build-dependencies]
 vergen={ version="8.0.0", features=["build", "git", "gitcl"] }
 
