--- a/.circleci/then.yml
+++ b/.circleci/then.yml
@@ -133,6 +133,13 @@ jobs:
             - install-dependencies-and-checkout
             - build
             - release
+    check-doc-build:
+        machine:
+            image: ubuntu-2204:2022.10.2
+            resource_class: xlarge
+        steps:
+            - install-dependencies-and-checkout
+            - run: cargo doc --no-deps
 
 parameters:
     crates:
@@ -149,18 +156,21 @@ parameters:
         type: boolean
 version: 2.1
 workflows:
-    lint:
+    # lint:
+    #     jobs:
+    #         - fmt-lint-all
+    # test:
+    #     jobs:
+    #         - node-benchmark
+    # build:
+    #     jobs:
+    #         - node-test
+    #     when:
+    #         or:
+    #             - << pipeline.parameters.node >>
+    #             - << pipeline.parameters.pallets >>
+    #             - << pipeline.parameters.runtime >>
+    #             - pipeline.parameters.crates
+    documentation:
         jobs:
-            - fmt-lint-all
-    test:
-        jobs:
-            - node-benchmark
-    build:
-        jobs:
-            - node-test
-        when:
-            or:
-                - << pipeline.parameters.node >>
-                - << pipeline.parameters.pallets >>
-                - << pipeline.parameters.runtime >>
-                - pipeline.parameters.crates
+            - check-doc-build
