--- a/.circleci/then.yml
+++ b/.circleci/then.yml
@@ -139,7 +139,7 @@ jobs:
             resource_class: xlarge
         steps:
             - install-dependencies-and-checkout
-            - run: cargo doc --no-deps
+            - run: cargo doc --no-deps --all-features
 
 parameters:
     crates:
