--- a/crates/client/Cargo.toml
+++ b/crates/client/Cargo.toml
@@ -34,6 +34,9 @@ hex             ={ version="0.4.3", optional=true }
 # Only for the browser
 js-sys={ version="0.3.68", optional=true }
 
+[dev-dependencies]
+tokio={ version="1.36" }
+
 [features]
 default=["native", "full-client-native"]
 native=[
