--- a/crates/client/Cargo.toml
+++ b/crates/client/Cargo.toml
@@ -35,7 +35,8 @@ hex             ={ version="0.4.3", optional=true }
 js-sys={ version="0.3.68", optional=true }
 
 [dev-dependencies]
-tokio={ version="1.36" }
+tokio      ="1.36"
+serial_test="3.1.1"
 
 [features]
 default=["native", "full-client-native"]
