--- a/crates/threshold-signature-server/Cargo.toml
+++ b/crates/threshold-signature-server/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name       ="entropy-tss"
-version    ="0.0.12"
+version    ="0.1.0-rc.1"
 authors    =['Entropy Cryptography <engineering@entropy.xyz>']
 homepage   ='https://entropy.xyz/'
 description='Entropy threshold signature scheme (TSS) server'
@@ -38,10 +38,12 @@ parity-scale-codec="3.6.12"
 sp-core           ={ version="31.0.0", default-features=false }
 
 # Entropy
-entropy-shared  ={ version="0.0.12", path="../shared" }
-entropy-kvdb    ={ version="0.0.12", path="../kvdb", default-features=false }
-entropy-protocol={ version="0.0.12", path="../protocol", features=["server"] }
-entropy-client  ={ version="0.0.12", path="../client", default-features=false, features=["native"] }
+entropy-shared={ version="0.1.0-rc.1", path="../shared" }
+entropy-kvdb={ version="0.1.0-rc.1", path="../kvdb", default-features=false }
+entropy-protocol={ version="0.1.0-rc.1", path="../protocol", features=["server"] }
+entropy-client={ version="0.1.0-rc.1", path="../client", default-features=false, features=[
+  "native",
+] }
 
 # Programs
 entropy-programs-runtime="0.10.0"
@@ -70,14 +72,14 @@ sha2             ="0.10.8"
 hkdf             ="0.12.4"
 
 [dev-dependencies]
-entropy-testing-utils={ version="0.0.12", path="../testing-utils" }
+entropy-testing-utils={ version="0.1.0-rc.1", path="../testing-utils" }
 serial_test          ="3.1.1"
 hex-literal          ="0.4.1"
 project-root         ="0.2.2"
 sp-keyring           ="34.0.0"
 more-asserts         ="0.3.1"
 lazy_static          ="1.4.0"
-entropy-protocol     ={ version="0.0.12", path="../protocol", features=["unsafe"] }
+entropy-protocol     ={ version="0.1.0-rc.1", path="../protocol", features=["unsafe"] }
 blake3               ="1.5.1"
 ethers-core          ="2.0.14"
 schnorrkel           ={ version="0.11.4", default-features=false, features=["std"] }
