--- a/crates/threshold-signature-server/Cargo.toml
+++ b/crates/threshold-signature-server/Cargo.toml
@@ -72,19 +72,25 @@ sha2             ="0.10.8"
 hkdf             ="0.12.4"
 
 [dev-dependencies]
-entropy-testing-utils={ version="0.1.0-rc.1", path="../testing-utils" }
 serial_test          ="3.1.1"
 hex-literal          ="0.4.1"
 project-root         ="0.2.2"
 sp-keyring           ="34.0.0"
 more-asserts         ="0.3.1"
 lazy_static          ="1.4.0"
-entropy-protocol     ={ version="0.1.0-rc.1", path="../protocol", features=["unsafe"] }
 blake3               ="1.5.1"
 ethers-core          ="2.0.14"
 schnorrkel           ={ version="0.11.4", default-features=false, features=["std"] }
-entropy-client       ={ path="../client", features=["full-client-native"] }
 schemars             ={ version="0.8.19" }
+
+# Note: We don't specify versions here because otherwise it would case a small cyclical dependency
+# that Cargo can't resolve. By not specifying a version the crates get removed during the publishing
+# process, allowing it to succeed.
+#
+# See: https://github.com/rust-lang/cargo/issues/4242
+entropy-client       ={ path="../client", features=["full-client-native"] }
+entropy-protocol     ={ path="../protocol", features=["unsafe"] }
+entropy-testing-utils={ path="../testing-utils" }
 
 [build-dependencies]
 vergen={ version="8.0.0", features=["build", "git", "gitcl"] }
