--- a/deny.toml
+++ b/deny.toml
@@ -33,9 +33,10 @@ exceptions=[
   { allow=["AGPL-3.0"], name="entropy-kvdb" },
   { allow=["AGPL-3.0"], name="entropy-protocol" },
   { allow=["AGPL-3.0"], name="entropy-shared" },
-  { allow=["AGPL-3.0"], name="entropy-test-cli" },
   { allow=["AGPL-3.0"], name="entropy-tss" },
   { allow=["AGPL-3.0"], name="entropy-client" },
+  { allow=["AGPL-3.0"], name="entropy-testing-utils" },
+  { allow=["AGPL-3.0"], name="entropy-test-cli" },
 
   # Other Entropy crates
   { allow=["AGPL-3.0"], name="entropy-programs-core" },
