--- a/pallets/propagation/Cargo.toml
+++ b/pallets/propagation/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name      ='pallet-propagation'
-version   ='0.1.0-rc.1'
+version   ='0.1.0'
 authors   =['Entropy Cryptography <engineering@entropy.xyz>']
 homepage  ='https://entropy.xyz/'
 license   ='AGPL-3.0-or-later'
@@ -26,12 +26,12 @@ sp-io                ={ version="31.0.0", default-features=false }
 sp-runtime           ={ version="32.0.0", default-features=false }
 sp-staking           ={ version="27.0.0", default-features=false }
 
-entropy-shared={ version="0.1.0-rc.1", path="../../crates/shared", default-features=false, features=[
+entropy-shared={ version="0.1.0", path="../../crates/shared", default-features=false, features=[
   "wasm-no-std",
 ] }
-pallet-registry={ version="0.1.0-rc.1", path="../registry", default-features=false }
-pallet-programs={ version="0.1.0-rc.1", path="../programs", default-features=false }
-pallet-staking-extension={ version="0.1.0-rc.1", path="../staking", default-features=false }
+pallet-registry={ version="0.1.0", path="../registry", default-features=false }
+pallet-programs={ version="0.1.0", path="../programs", default-features=false }
+pallet-staking-extension={ version="0.1.0", path="../staking", default-features=false }
 
 [dev-dependencies]
 parking_lot="0.12.2"
