--- a/crates/client/Cargo.toml
+++ b/crates/client/Cargo.toml
@@ -27,7 +27,7 @@ x25519-dalek    ={ version="2.0.1", features=["static_secrets"], optional=true }
 entropy-protocol={ version="0.1.0", path="../protocol", optional=true, default-features=false }
 reqwest         ={ version="0.12.4", features=["json", "stream"], optional=true }
 base64          ={ version="0.22.0", optional=true }
-synedrion       ={ version="0.1", optional=true }
+synedrion       ={ git="https://github.com/entropyxyz/synedrion", rev="7df95fe72781797dc369db00b68c27907559f31a", optional=true }
 hex             ={ version="0.4.3", optional=true }
 
 # Only for the browser
