--- a/crates/client/Cargo.toml
+++ b/crates/client/Cargo.toml
@@ -29,13 +29,16 @@ reqwest         ={ version="0.12.4", features=["json", "stream"], optional=true 
 base64          ={ version="0.22.0", optional=true }
 synedrion       ={ version="0.1", optional=true }
 hex             ={ version="0.4.3", optional=true }
+anyhow          ="1.0.86"
 
 # Only for the browser
 js-sys={ version="0.3.68", optional=true }
 
 [dev-dependencies]
-tokio      ="1.38"
-serial_test="3.1.1"
+tokio                ="1.38"
+serial_test          ="3.1.1"
+entropy-testing-utils={ path="../testing-utils" }
+sp-keyring           ="34.0.0"
 
 [features]
 default=["native", "full-client-native"]
