--- a/deny.toml
+++ b/deny.toml
@@ -37,6 +37,7 @@ exceptions=[
   { allow=["AGPL-3.0"], name="entropy-client" },
   { allow=["AGPL-3.0"], name="entropy-testing-utils" },
   { allow=["AGPL-3.0"], name="entropy-test-cli" },
+  { allow=["AGPL-3.0"], name="entropy-create-test-keyshares" },
 
   # Other Entropy crates
   { allow=["AGPL-3.0"], name="entropy-programs-core" },
