--- a/scripts/create-test-keyshares/Cargo.toml
+++ b/scripts/create-test-keyshares/Cargo.toml
@@ -11,6 +11,8 @@ edition    ='2021'
 [dependencies]
 entropy-testing-utils={ version="0.1.0", path="../../crates/testing-utils" }
 tokio                ={ version="1.36", features=["macros", "fs", "rt-multi-thread", "io-util", "process"] }
-sp-keyring           ="34.0.0"
 entropy-shared       ={ version="0.1.0", path="../../crates/shared" }
 entropy-kvdb         ={ version="0.1.0", path="../../crates/kvdb", default-features=false }
+synedrion            ={ git="https://github.com/entropyxyz/synedrion", rev="25373111cbb01e1a25d8a5c5bb8f4652c725b3f1" }
+sp-core              ={ version="31.0.0", default-features=false }
+entropy-tss          ={ version="0.1.0", path="../../crates/threshold-signature-server" }
