--- a/crates/threshold-signature-server/Cargo.toml
+++ b/crates/threshold-signature-server/Cargo.toml
@@ -68,6 +68,7 @@ hostname         ="0.4"
 sha1             ="0.10.6"
 sha2             ="0.10.8"
 hkdf             ="0.12.4"
+project-root     ={ version="0.2.2", optional=true }
 
 [dev-dependencies]
 serial_test ="3.1.1"
@@ -96,11 +97,12 @@ entropy-testing-utils={ path="../testing-utils" }
 vergen={ version="8.0.0", features=["build", "git", "gitcl"] }
 
 [features]
-default=['std']
-std    =["sp-core/std"]
-unsafe =[]
-alice  =[]
-bob    =[]
+default     =['std']
+std         =["sp-core/std"]
+test_helpers=["dep:project-root"]
+unsafe      =[]
+alice       =[]
+bob         =[]
 # Enable this feature to run the integration tests for the wasm API of entropy-protocol
 # This requires the entropy-protocol node-js module to be built and so is not run by default
 wasm_test=[]
